# sal

./: .gitignore  .pre-commit-config.yaml  99_frontmatter.html  Makefile  README.md  _modidx.py  arguments.html  cli.html  codegen.html  core.html  index.html  loaders.html  mypy.ini  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  styles.css  templates.html  utils.html
nbs/: 00_core.ipynb  01_loaders.ipynb  02_code_generation.ipynb  02_codegen.ipynb  03_cli.ipynb  99_arguments.ipynb  99_frontmatter.ipynb  99_templates.ipynb  99_utils.ipynb  arguments.ipynb  index.ipynb  nbdev.yml  sidebar.yml  styles.css  templates.ipynb
sal/: _modidx.py  arguments.py  cli.py  codegen.py  core.py  data.py  data_loaders.py  frontmatter.py  loaders.py  templates.py  utils.py
scripts/: publish.sh  update.sh
