[tool.poetry]
name = "sal"
version = "0.0.3"
description = ""
authors = ["mauro santos <mauro.goncalo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastcore = "^1.5.27"
python-frontmatter = "^1.0.0"
click = "^8.1.3"
black = "^22.10.0"

[tool.poetry.dev-dependencies]
notebook = "^6.5.1"
nbdev = "^2.3.7"
twine = "^4.0.1"
jupyterlab = "^3.5.0"
pre-commit = "^2.20.0"
jupyter-black = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sal = "sal.cli:hello"