[tool.poetry]
name = "sal-code-generator"
version = "0.0.30"
description = ""
authors = ["mauro santos <mauro.goncalo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sal" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastcore = "^1.5.29"
python-frontmatter = "^1.0.0"
click = "^8.1.3"
black = "^22.10.0"
notebook = "^6.5.1"
nbdev = "^2.3.13"
twine = "^4.0.1"
jupyterlab = "^3.5.0"
pre-commit = "^2.20.0"
jupyter-black = "^0.3.1"
rust = "^1.3.1"
mypy = "^1.7.1"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sal = "sal.cli:main"